--- a/BloggingPlatform.Business/BloggingPlatform.Business.csproj
+++ b/BloggingPlatform.Business/BloggingPlatform.Business.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\BloggingPlatform.Data\BloggingPlatform.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.1-pre01" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.2.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.0" />
+  </ItemGroup>
+
 </Project>
